--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,6 @@ plugins:
   - jekyll-redirect-from
 
 paginate: 8
-paginate_path: "/blog/page/:num"
+paginate_path: "/page/:num"
 
 exclude: ["node_modules", "gulpfile.js", "package.json", "yarn.lock"]
