--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,5 @@
 title: Darren Yao's website
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Hi, I'm Darren, currently a senior at Carlmont High School interested in mathematics and computer science.
 permalink: ':title/'
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://darrenyao.com/" # the base hostname & protocol for your site, e.g. http://example.com
